1999-01-05  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (mime-decode-header-in-region): Typo fix.

1999-01-04  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_12_1 from flim-1_11_3.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.12.0.

1999-01-04  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-var.el (ew-decode-field-syntax-alist): Add `x-face-version',
	`x-pgp-sig-version', `x-pgp-key-info' and `x-info'.

1998-10-27  Tanaka Akira      <akr@jaist.ac.jp>

	* DOODLE-TIPS: Add a workaround for Chao-gnus 6.9.

1998-10-27  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_11_3 from flim-1_11_2.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.11.2.

1998-10-26  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_11_2 from flim-1_11_0.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.11.1.

1998-10-25  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (eword-decode-field-body): Change interface.

1998-10-25  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (eword-decode-field): Abolished.
	(eword-decode-field-body): New function.

1998-10-24  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-b-ccl.el: New file.

	* mel-q-ccl.el: New file.

	* mel-ccl.el: Abolished.

	* mel.el: Use `mel-b-ccl' and `mel-q-ccl' instead of `mel-ccl'.

	* FLIM-ELS (flim-modules): Add `mel-b-ccl' and `mel-q-ccl'.
	Delete `mel-ccl'.

1998-10-19  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (eword-decode-field): New function.

1998-10-18  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_11_0 from flim-1_10_5.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.11.0.

1998-10-17  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-ccl.el: Check broken facility consistency by
	`check-broken-facility'.

1998-10-14  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_10_5 from flim-1_10_2.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.10.2.
