@@ -1,3 +1,11 @@
+1999-01-17  Tanaka Akira      <akr@jaist.ac.jp>
+
+	* ew-compat.el (ew-mime-update-field-decoder-cache): Abolished
+	because duplicated.
+
+	* mmgeneric.el (mime-insert-header-from-buffer): Convert LF to CRLF for
+	original-field-body.
+
 1999-01-05  Tanaka Akira      <akr@jaist.ac.jp>
 
 	* eword-decode.el (mime-decode-header-in-region): Typo fix.
